Prevent charts from overflowing.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,7 @@ h5 > span {
   margin-left: 15px;
   color: #777;
 }
+
+.highcharts-container {
+  width: 100% !important;
+}
